# aws-finops-portal

./: .gitignore  .mise.toml  Makefile  README.md  README.pt-BR.md  pyproject.toml
.kiro/settings/: mcp.json
.kiro/specs/aws-cost-dashboard/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/steering/: costwatch-project.md
cdk/: app.py  cdk.json
cdk.out/: CostWatchApiStack.assets.json  CostWatchApiStack.template.json  CostWatchDatabaseStack.assets.json  CostWatchDatabaseStack.template.json  CostWatchSchedulerStack.assets.json  CostWatchSchedulerStack.template.json  manifest.json  tree.json
cdk.out/asset.0a8db771f1a6f226c62b20d1410ee83d8caa5369ad2dfea9bbdc071978e7cb68/handlers/: get_service_breakdown.py  get_trend.py
cdk.out/asset.0a8db771f1a6f226c62b20d1410ee83d8caa5369ad2dfea9bbdc071978e7cb68/services/: forecast_service.py
cdk/stacks/: api_stack.py  database_stack.py  scheduler_stack.py
frontend/: app.js  index.html  styles.css
personal-docs/: kiro-aws-cost-dashboard-spec1.md
src/handlers/: get_accounts.py  get_dashboard.py  get_forecast.py  get_service_breakdown.py  get_summary.py  get_trend.py  ingest_costs.py
src/repositories/: budget_repository.py  cost_record_repository.py
src/services/: cost_ingestion_service.py  cost_query_service.py  dashboard_snapshot_service.py  forecast_service.py
src/utils/: date_utils.py
tests/models/: test_budget.py  test_cost_record.py  test_service_breakdown.py
tests/utils/: test_auth.py  test_aws_client.py  test_date_utils.py  test_response.py
(+30 files in other folders)
